team/output/BD_772_700_1404/316/1/1/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_772_700_1404.py", line 7
    def computeContribs(merged_tuple);
                                     ^
SyntaxError: invalid syntax
